--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -44,12 +44,12 @@ minigame-messages:
       - "&#ffb3a6Equation: &#ff8787{num1}{operation}{num2}"
       - "&7&m                            "
 
-    rush: # Available placeholders: {word}
+    rush: # Available placeholders: {answer}
       - "&7&m                            "
       - "&#ffb3a6&lMinigame! &#734841| &#ffb3a6Rush"
       - ""
       - "&#ffb3a6Type the word the fastest for &#ff8787100 coins!"
-      - "&#ffb3a6Word: &#ff8787{word}"
+      - "&#ffb3a6Word: &#ff8787{answer}"
       - "&7&m                            "
 
     unscramble: # Available placeholders: {scrambled}
